--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -134,7 +134,7 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "76145"
       ]
      },
      "execution_count": 8,
@@ -143,8 +143,12 @@
     }
    ],
    "source": [
-    "tuz = combinations(4, 1)\n",
-    "tuz"
+    "one = combinations(51, 3)\n",
+    "two = combinations(50, 3)\n",
+    "three = combinations(49, 3)\n",
+    "four = combinations(48, 3)\n",
+    "hm=one+two+three+four\n",
+    "hm"
    ]
   },
   {
@@ -155,7 +159,7 @@
     {
      "data": {
       "text/plain": [
-       "20825"
+       "0.2812632745405855"
       ]
      },
      "execution_count": 9,
@@ -164,8 +168,7 @@
     }
    ],
    "source": [
-    "other = combinations(51, 3)\n",
-    "other"
+    "hm/all"
    ]
   },
   {
@@ -176,7 +179,7 @@
     {
      "data": {
       "text/plain": [
-       "83300"
+       "76145"
       ]
      },
      "execution_count": 10,
@@ -185,8 +188,8 @@
     }
    ],
    "source": [
-    "all_good = tuz*other\n",
-    "all_good"
+    "two = (combinations(4,1)*combinations(48,3)+combinations(4,2)*combinations(48,2)+combinations(4,3)*combinations(48,1)+combinations(4,4)*combinations(48,0))\n",
+    "two"
    ]
   },
   {
@@ -197,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "0.3076923076923077"
+       "0.2812632745405855"
       ]
      },
      "execution_count": 11,
@@ -206,8 +209,70 @@
     }
    ],
    "source": [
-    "b = all_good/all\n",
-    "b"
+    "two/all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "194580"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#если нет ниодного туза\n",
+    "no_tuz = combinations(48, 4)\n",
+    "no_tuz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7187367254594146"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = no_tuz/all\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2812632745405854"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1-c"
    ]
   },
   {
@@ -220,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +294,7 @@
        "120"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +315,7 @@
        "0.008333333333333333"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +343,7 @@
        "84"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +364,7 @@
        "455"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +385,7 @@
        "0.18461538461538463"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +435,7 @@
        "0.00020202020202020202"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
